[gd_scene load_steps=7 format=3 uid="uid://cjli835xwy0bb"]

[ext_resource type="Script" path="res://scripts/projectiles/CatchingCable.gd" id="1_l0vmu"]
[ext_resource type="Script" path="res://scripts/projectiles/Projectile.gd" id="2_4ymas"]
[ext_resource type="Texture2D" uid="uid://cnmbxvpng45ys" path="res://assets/PNG/Retina/bulletDark3_outline.png" id="2_183pd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cehvc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_so110"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5ugie"]
a = Vector2(-10, 0)
b = Vector2(10, 0)

[node name="CatchingCable" type="CharacterBody2D"]
rotation = 1.5708
script = ExtResource("1_l0vmu")
damages = 0
impact_force = 0.0

[node name="BallRight" type="CharacterBody2D" parent="."]
position = Vector2(13.3333, 0)
script = ExtResource("2_4ymas")
damages = 0
size = 0.7
impact_force = 0.0

[node name="Sprite2D" type="Sprite2D" parent="BallRight"]
texture = ExtResource("2_183pd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallRight"]
shape = SubResource("CircleShape2D_cehvc")

[node name="BallLeft" type="CharacterBody2D" parent="."]
position = Vector2(-13.3333, 0)
script = ExtResource("2_4ymas")
speed = 1
damages = 0
size = 0.7
impact_force = 0.0

[node name="Sprite2D" type="Sprite2D" parent="BallLeft"]
texture = ExtResource("2_183pd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallLeft"]
shape = SubResource("CircleShape2D_so110")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(-10, 0, 10, 0)
width = 4.0
default_color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_5ugie")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="TimerRetract" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="TimerRetract" to="." method="_on_timer_retract_timeout"]
